--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 kilmedt的网站
-<DOCTYPE HTML xmlns="http://www.w3.org/1999/html">
-    <html  lang="en"
-           <head>
-               <meta charset="utf-8">
-              <title>kilmedt的网站</title>
-           </head>
-    <body>
-   <h1>先就这样吧</h1>
-   < p >放张图片</ p >
-        <ing src="e3f5623cd43acdb74744d189f8686c16bc046d1b.jpg"/>
-</ body >
-</html>
+DOCTYPE HTML
+<html  lang="en"
+<head>
+    <meta charset="utf-8">
+    <title>kilmedt的网站</title>
+</head>
+<body>
+<h1>先就这样吧</h1>
+<p>放张图片</p>
+<ing src="https://hbimg.huabanimg.com/d4ef5fe5e381102bb822dc24b97ba703c0f4d61396e6b-XZwWYj_fw658/>
+</body>
+</html>>
+
