--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 kilmedt的网站
-DOCTYPE HTML
+<DOCTYPE HTML
 <html  lang="en"
 <head>
     <meta charset="utf-8">
@@ -10,5 +10,5 @@ DOCTYPE HTML
 <p>放张图片</p>
 <ing src="https://hbimg.huabanimg.com/d4ef5fe5e381102bb822dc24b97ba703c0f4d61396e6b-XZwWYj_fw658/>
 </body>
-</html>>
+</html>
 
