--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ kilmedt的网站
 <body>
 <h1>先就这样吧</h1>
 <p>放张图片</p>
-<ing src="https://hbimg.huabanimg.com/d4ef5fe5e381102bb822dc24b97ba703c0f4d61396e6b-XZwWYj_fw658/>
+<ing src="e3f5623cd43acdb74744d189f8686c16bc046d1b.jpg"/>
 </body>
 </html>
 
