--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@ kilmedt的网站
 <body>
 <h1>先就这样吧</h1>
 <p>放两张图片</p>
-    <img src="e3f5623cd43acdb74744d189f8686c16bc046d1b.jpg"/>
-   <body/>
-    <body>
-    <img src="01.jpg/>
+    <img src="e3f5623cd43acdb74744d189f8686c16bc046d1b.jpg""01.jpg"/>
+   
 </body>
 </html>
 
