--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ kilmedt的网站
 </head>
 <body>
 <h1>先就这样吧</h1>
-<p>放两张图片</p>
+<p>放张图片</p>
     <img src="e3f5623cd43acdb74744d189f8686c16bc046d1b.jpg""01.jpg"/>
    
 </body>
