--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@ kilmedt的网站
 <head>
     <meta charset="utf-8">
     <title>kilmedt的网站</title>
+    <style type="text/css">
+        body{
+            background-image: url(e3f5623cd43acdb74744d189f8686c16bc046d1b.jpg);
+            background-size: 100% 100%;
+            height: 100%;
+        }
+        hyml{
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
 <h1>先就这样吧</h1>
 <p>放张图片</p>
-    <img src="e3f5623cd43acdb74744d189f8686c16bc046d1b.jpg""01.jpg"/>
+
    
 </body>
 </html>
-
