--- a/index.html
+++ b/index.html
@@ -10,12 +10,30 @@ kilmedt的网站
             background-size: 100% 100%;
             height: 100%;
         }
-        hyml{
+        html{
             height: 100%;
         }
+        @keyframes kil {
+            from{background-image:url(e3f5623cd43acdb74744d189f8686c16bc046d1b.jpg) ;}
+            to{background-image:url("01.jpg");}
+
+
+        }
+        body{animation: kil  2s infinite}
+        @keyframes kilm {
+            from{opacity:0%}
+            to{opacity: 100%;
+
+        }
+        h1,p{animation: kilm   2s infinite}
+
     </style>
 </head>
 <body>
+<audio src="bgm.mp3"  controls="controls"
+       autoplay="autoplay"
+
+</audio>
 <h1>先就这样吧</h1>
 <p>放张图片</p>
 
