--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@ kilmedt的网站
         body{animation: kil  10s infinite}
         @keyframes kilm {
             from{opacity:0%}
-            to{opacity: 100%;
+            to{opacity: 100%}
 
         }
-        h1,p{animation: kilm   2s infinite}
+        h1,p{animation: kilm   10s infinite}
 
     </style>
 </head>
@@ -34,9 +34,11 @@ kilmedt的网站
        autoplay="autoplay"
 
 </audio>
+
+    
 <h1>先就这样吧</h1>
 <p>放张图片</p>
-
+<p>今天就到这吧<p>
    
 </body>
 </html>
