--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@ kilmedt的网站
 
         }
         body{animation: kil  10s infinite}
-        @keyframes kilm {
-            from{opacity:0%}
-            to{opacity: 100%}
-
-        }
-        h1,p{animation: kilm   10s infinite}
+        
 
     </style>
 </head>
@@ -38,7 +33,7 @@ kilmedt的网站
     
 <h1>先就这样吧</h1>
 <p>放张图片</p>
-<p>今天就到这吧<p>
+<p>今天就到这吧</p>
    
 </body>
 </html>
