--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ kilmedt的网站
             from{background-image:url(e3f5623cd43acdb74744d189f8686c16bc046d1b.jpg) ;}
             to{background-image:url("01.jpg")}}
         body{animation: kil  10s infinite}
+        h1{font-size:35px}
  </style>
 </head>
 <body>
