--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 kilmedt的网站
 <DOCTYPE HTML
 <html  lang="en"
-<head ailgn="center">
+<head >
     <meta charset="utf-8">
     <title>kilmedt的网站</title>
     <style type="text/css">
@@ -19,22 +19,16 @@ kilmedt的网站
  </style>
 </head>
 <body>
-<h1>先就这样吧</h1>
-<p ailgn="center">放张图片</p>
-<p ailgn="center">今天就到这吧</p>
+<h1 align="center">先就这样吧</h1>
+<p align="center">放张图片</p>
+<p align="center">今天就到这吧</p>
     <audio src="bgm.mp3"  controls="controls"
        autoplay="autoplay">
 </audio>
     <table border="1">efegeregefe</table>
-<button bgcolor="red" ><a 
-
-href="https://hbimg.huabanimg.com/6ef563263fc22b404033b4cf236418e7b64f
-
+<button bgcolor="red" ><a href="https://hbimg.huabanimg.com/6ef563263fc22b404033b4cf236418e7b64f
 f733281fe-7Lnmbv_fw658">qqqqq</a></button>
-<a 
-
-href="https://hbimg.huabanimg.com/6ef563263fc22b404033b4cf236418e7b64f
-
+<a href="https://hbimg.huabanimg.com/6ef563263fc22b404033b4cf236418e7b64f
 f733281fe-7Lnmbv_fw658">  wwww  </a>
 <img>01.jpg</img>
 </body>
