--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@ kilmedt的网站
 f733281fe-7Lnmbv_fw658">qqqqq</a></button>
 <a href="https://hbimg.huabanimg.com/6ef563263fc22b404033b4cf236418e7b64f
 f733281fe-7Lnmbv_fw658">  wwww  </a>
-<img>01.jpg</img>
+<img src="01.jpg">01.jpg</img>
 </body>
 </html>
