--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ kilmedt的网站
 <html  lang="en"
 <head >
     <meta charset="utf-8">
-    <title>kilmedt的网站</title>
+    <title>KILMEDT</title>
     <style type="text/css">
         body{
             background-image: url(e3f5623cd43acdb74744d189f8686c16bc046d1b.jpg);
@@ -19,17 +19,7 @@ kilmedt的网站
  </style>
 </head>
 <body>
-<h1 align="center">先就这样吧</h1>
-<p align="center">放张图片</p>
-<p align="center">今天就到这吧</p>
-    <audio src="bgm.mp3"  controls="controls"
-       autoplay="autoplay">
-</audio>
-    <table border="1">efegeregefe</table>
-<button bgcolor="red" ><a href="https://hbimg.huabanimg.com/6ef563263fc22b404033b4cf236418e7b64f
-f733281fe-7Lnmbv_fw658">qqqqq</a></button>
-<a href="https://hbimg.huabanimg.com/6ef563263fc22b404033b4cf236418e7b64f
-f733281fe-7Lnmbv_fw658">  wwww  </a>
+<h1 align="center">KILMEDT</h1>
 <img src="https://hbimg.huabanimg.com/6ef563263fc22b404033b4cf236418e7b64f
 f733281fe-7Lnmbv_fw658">01.jpg</img>
 </body>
