--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ kilmedt的网站
  </style>
 </head>
 <body>
-<h1 align="center" colo="white">KILMEDT</h1>
+<h1 align="center" color="white">KILMEDT</h1>
 
 </body>
 </html>
