--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ kilmedt的网站
     <title>KILMEDT</title>
     <style type="text/css">
         body{
-            background-image: url(e3f5623cd43acdb74744d189f8686c16bc046d1b.jpg);
+            background-image: url(332.jpg);
             background-size: 100% 100%;
             height: 100%;
         }
