--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 kilmedt的网站
 <DOCTYPE HTML
-<html  lang="en"
+<html  lang="zh-cn">
 <head >
     <meta charset="utf-8">
     <title>KILMEDT</title>
@@ -15,6 +15,7 @@ kilmedt的网站
 </head>
 <body>
 <h1 align="center" color="white">KILMEDT</h1>
+<p1>我的<a href="https://space.bilibili.com/87122588">b站</a></p1>
 
 </body>
 </html>
